@@ -19,6 +19,11 @@ cupt (0.5.2) UNRELEASED; urgency=low
       - Added configuration option 'dir::etc::preferencesparts'.
     - Cache:
       - Honor 'dir::etc::preferencesparts' option.
+    - Download:
+      - Progress:
+        - New method 'get_overall_downloaded_size'.
+      - Progresses/Console:
+        - Print also overall downloaded size on exit.
 
  -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 05 Aug 2009 11:41:06 +0300
 
